[tool.poetry]
name = "viewing-system-configuration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wmi = "^1.5.1"
gputil = "^1.4.0"
screeninfo = "^0.8.1"
sv-ttk = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
